--- a/src/app/index.html
+++ b/src/app/index.html
@@ -78,9 +78,9 @@
         <div class="row music-play-toolbar">
             <div class="row" style="padding: 0;margin: 0;height: 16px;">
                 <div class="progress" id="play-progress">
-                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-                         aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-                        <span class="sr-only">4% Complete (success)</span>
+                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0"
+                         aria-valuemin="0" aria-valuemax="1000" style="width: 0%;">
+                        <span class="sr-only"></span>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,25 @@
                 <audio id="music_player" class="hidden" src="./Cache/神仙卷奇缘.mp3" controls="controls"></audio>
             </div>
             <div class="row" style="padding: 0;margin: 0;">
-                <a href="#" id="player" style="color:#1FD4AF;"><i class="iconfont" style="font-size: 32px;">&#xe617;</i></a>
+                <div class="col-xs-4"></div>
+                <div class="col-xs-4 text-center" id="control_panel">
+                    <a href="#" id="loop">
+                        <i class="glyphicon glyphicon-retweet"></i>
+                    </a>
+                    <a href="#" id="pre">
+                        <i class="glyphicon glyphicon-step-backward"></i>
+                    </a>
+                    <a href="#" id="player" style="color:#1FD4AF;line-height: 40px;" data-type="1">
+                        <i class="iconfont" style="font-size: 39px;">&#xe617;</i>
+                    </a>
+                    <a href="#" id="next">
+                        <i class="glyphicon glyphicon-step-forward"></i>
+                    </a>
+                    <a href="#" id="volume">
+                        <i class="glyphicon glyphicon-volume-up"></i>
+                    </a>
+                </div>
+                <div class="col-xs-4"></div>
             </div>
         </div>
     </div>
