添加部分新的歌曲

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -87,9 +87,9 @@
             <div class="row" style="padding: 0;margin: 0;">
                 <div class="col-xs-4"></div>
                 <div class="col-xs-4 text-center" id="control_panel">
-                    <a href="#" id="loop">
+                    <!--<a href="#" id="loop">
                         <i class="glyphicon glyphicon-retweet"></i>
-                    </a>
+                    </a>-->
                     <a href="#" id="pre">
                         <i class="glyphicon glyphicon-step-backward"></i>
                     </a>
@@ -99,9 +99,9 @@
                     <a href="#" id="next">
                         <i class="glyphicon glyphicon-step-forward"></i>
                     </a>
-                    <a href="#" id="volume">
+                    <!--<a href="#" id="volume">
                         <i class="glyphicon glyphicon-volume-up"></i>
-                    </a>
+                    </a>-->
                 </div>
                 <div class="col-xs-4"></div>
             </div>
