--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" href="../../node_modules/font-awesome/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="renderer/css/iconfont/iconfont.css"/>
+    <link rel="stylesheet" href="renderer/css/iconfont1/iconfont.css"/>
     <link rel="stylesheet" href="renderer/css/index.css">
 </head>
 
@@ -79,31 +80,55 @@
             <div class="row" style="padding: 0;margin: 0;height: 16px;">
                 <div class="progress" id="play-progress">
                     <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0"
-                         aria-valuemin="0" aria-valuemax="1000" style="width: 0%;">
+                         aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
                         <span class="sr-only"></span>
                     </div>
                 </div>
             </div>
             <div class="row" style="padding: 0;margin: 0;">
-                <div class="col-xs-4"></div>
+                <div class="col-xs-4">
+                    <div style="height: 40px;padding-left: 26px;">
+                        <div class="media">
+                            <div class="media-left">
+                                <a href="#" style="border-radius: 4px;">
+                                    <img class="media-object" src="" alt="" id="show_image" width="40" height="40">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <div style="width:196px;font-size:12px;overflow:hidden;white-space: nowrap;text-overflow: ellipsis;">
+                                    <span id="music_name"></span>
+                                    <span id="author_name" class="text-muted"></span>
+                                </div>
+                                <div class="music-img-tool">
+                                    <a href="#" class="ilike"><i class="glyphicon glyphicon-heart" style="font-size: 18px;"></i></a>
+                                    <a href="#"><i class="iconfont">&#xe678;</i></a>
+                                    <a href="#"><i class="iconfont">&#xe785;</i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-xs-4 text-center" id="control_panel">
-                    <!--<a href="#" id="loop">
-                        <i class="glyphicon glyphicon-retweet"></i>
-                    </a>-->
-                    <a href="#" id="pre">
-                        <i class="glyphicon glyphicon-step-backward"></i>
+                    <a href="#" id="loop" style="width: 28px;">
+                        <i class="iconfont" style="font-size: 20px;">&#xe66c;</i>
+                    </a>
+                    <a href="#" id="pre" style="width: 28px;">
+                        <i class="iconfont" style="font-size: 20px;">&#xe603;</i>
                     </a>
                     <a href="#" id="player" style="color:#1FD4AF;line-height: 40px;" data-type="1">
                         <i class="iconfont" style="font-size: 39px;">&#xe617;</i>
                     </a>
-                    <a href="#" id="next">
-                        <i class="glyphicon glyphicon-step-forward"></i>
+                    <a href="#" id="next" style="width: 28px;">
+                        <i class="iconfont" style="font-size: 20px;">&#xe602;</i>
                     </a>
-                    <!--<a href="#" id="volume">
-                        <i class="glyphicon glyphicon-volume-up"></i>
-                    </a>-->
+                    <a href="#" id="volume" style="width: 28px;">
+                        <i class="iconfont" style="font-size: 20px;">&#xe748;</i>
+                    </a>
                 </div>
-                <div class="col-xs-4"></div>
+                <div class="col-xs-4">
+                    <div id="show_time" class="text-right text-muted"
+                         style="height: 40px;line-height: 40px;font-size: 12px;"></div>
+                </div>
             </div>
         </div>
     </div>
