--- a/src/app/renderer/css/index.css
+++ b/src/app/renderer/css/index.css
@@ -133,7 +133,7 @@ a:focus, a:hover {
 
 .music-play-toolbar #control_panel a {
     display: inline-block;
-    width: 42px;
+    width: 40px;
     height: 40px;
     line-height: 40px;
     text-align: center;
@@ -148,4 +148,33 @@ a:focus, a:hover {
 
 .music-play-toolbar #control_panel a i.glyphicon {
     margin-top: 8px;
+}
+
+.music-img-tool a {
+    cursor: pointer;
+    color: #9c9c9c;
+    margin-right: 9px;
+}
+
+.music-img-tool a i {
+    font-size: 20px;
+}
+
+.music-img-tool a:hover {
+    text-underline: none;
+    color: #1FD4AF;
+}
+
+.music-img-tool a.ilike {
+    cursor: pointer;
+    color: #ff6d77;
+}
+
+.music-img-tool a.ilike:hover {
+    text-underline: none;
+    color: #ff4d71;
+}
+
+.text-muted {
+    color: #9c9c9c;
 }
