图片等按钮添加

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -18,8 +18,8 @@
 <div class="panel panel-default left-panel pull-left">
     <div class="panel-body">
         <div class="music-icon">
-            <div class="music-icon-text text-warning">
-                <i class="iconfont">&#xe61a;</i>QF音乐
+            <div class="music-icon-text" style="color: #fff;">
+                <i class="iconfont">&#xe61a;</i>QQ音乐
             </div>
         </div>
         <ul class="list-group">
@@ -81,7 +81,6 @@
                 <div class="progress" id="play-progress">
                     <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0"
                          aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
-                        <span class="sr-only"></span>
                     </div>
                 </div>
             </div>
