--- a/src/app/renderer/css/index.css
+++ b/src/app/renderer/css/index.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #171718;
-    font-family: "Microsoft YaHei";
+    font-family: regular;
 }
 
 .left-panel {
