优化本地删除后播放问题

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -75,7 +75,7 @@
                 </span>
             </div>
         </div>
-        <div class="music-body">
+        <div class="music-body" style="padding: 10px 40px;">
             <table id="table"></table>
         </div>
         <div class="row music-play-toolbar">
