无边框app可拖拽添加

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -54,9 +54,10 @@
 </div>
 <div class="panel panel-default right-panel">
     <div class="panel-body" style="box-sizing: border-box;height: 100%;padding: 80px 0 70px 0;">
-        <div class="row toolbar-panel">
+        <!---webkit-app-region 设置该区域应用可拖拽-->
+        <div class="row toolbar-panel" style="-webkit-app-region:drag;">
             <div class="col-xs-9"></div>
-            <div class="col-xs-3 text-right">
+            <div class="col-xs-3 text-right" style="-webkit-app-region:no-drag;">
                 <span href="#" id="app_bars">
                     <i class="iconfont">&#xe62f;</i>
                 </span>
