--- a/src/app/index.html
+++ b/src/app/index.html
@@ -20,7 +20,7 @@
     <div class="panel-body">
         <div class="music-icon">
             <div class="music-icon-text" style="color: #fff;">
-                <i class="iconfont">&#xe61a;</i>QQ音乐
+                <i class="iconfont">&#xe61a;</i>音乐
             </div>
         </div>
         <ul class="list-group">
